--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ android {
 
 dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.orhanobut:logger:1.15'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.github.zhaokaiqiang.klog:library:1.6.0'
 }
